# Controle-Roncatin

./: README.md
ERP/: .env.example  CONFIGURACAO-GITHUB.md  Cargo.toml  Dockerfile  RAILWAY-DEPLOY.md  deploy-railway.ps1  railway.toml
ERP/.github/workflows/: deploy-railway.yml
ERP/backend/: Cargo.toml
ERP/backend/src/: error.rs  main.rs
ERP/backend/src/routes/: mod.rs
ERP/frontend-wasm/: Cargo.toml  README-FINANCEIRO.md  compile-ts.ps1  index.html  tsconfig.json
ERP/frontend-wasm/src/: api.rs  app.js  app.ts  bancos.js  bancos.ts  components.rs  lib.rs
ERP/frontend-wasm/src/pages/: clientes.rs  contas.rs  dashboard.rs  mod.rs  produtos.rs  vendas.rs
