[package]
name = "erp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
mongodb = "2.8"
bson = { version = "2.9", features = ["chrono-0_4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dotenv = "0.15"
